@@ -1,3 +1,8 @@
+Fri Aug 29 17:23:55 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* analysis.c (Luck, Skill): modify inequalities.
+	(bug reported by Michael Depreli, fix contributed by Nis Joergensen)
+
 Fri Aug 29 13:58:55 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>
 
 	* autogen.sh: touch board3d/Makefile.in and textures/Makefile.in.
